# fair-do-typesystem

.github/workflows/: typesystem-tests.yml
typesystem/: README.md  registry.json  requirements.txt  typesystem.yaml  visualize.py
typesystem/attributes/attribute-def/: 0.FDO-Cardinality.json  0.FDO-DataType.json  0.FDO-ValidationMechanism.json
typesystem/attributes/mandatory/: 0.FDO-Data.json  0.FDO-Profile.json  0.FDO-Type.json
typesystem/attributes/profile-def/: 0.FDO-Attribute.json  0.FDO-Description.json  0.FDO-Description.md  0.FDO-Extends.json  0.FDO-Name.json  0.FDO-Name.md  0.FDO-denyAdditionalAttributes.json
typesystem/attributes/syntax-def/: 0.FDO-Blacklist.json  0.FDO-NumericInterval.md  (+4 more)
typesystem/core/: 0.FDO-AttributeDef.json  0.FDO-ProfileDef.json  0.FDO-Root.json  0.FDO-SyntaxDef.json
typesystem/examples/: data.json  extending-profile.json  must-extend-instance.json  must-extend-profile.json  profile-with-duplicates.json  recursing-profile.json
typesystem/scripts/: __init__.py  analysis.md  assembly.py  generic_record_validation.py  helpers.py  models.py  pyproject.toml  registry.py  validate.py  validation_logger.py  validators.py
typesystem/scripts/docs/: PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  implementation_plan.md
typesystem/scripts/tests/: __init__.py  test_assembly.py  test_attribute_validation.py  test_models.py  test_registry.py  test_validation_logger.py  test_validators.py
typesystem/syntax/: BooleanSyntax.json  IntegerSyntax.json  NumberSyntax.json  StringSyntax.json
(+3 files in other folders)
