[project]
name = "fdo-typesystem-tools"
version = "0.1.0"
description = "FAIR Digital Objects Type System - Development and Validation Tools"
readme = "../README.md"
requires-python = ">=3.10"
license = {text = "Apache 2.0"}
authors = [
    {name = "FDO Type System Contributors"}
]
keywords = ["fdo", "fair", "metadata", "type-system", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = []

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
fdo-validate = "validate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
